# bulk-spindle-speed-updater

./: .gitignore  Cargo.toml  README.md  update_spindle_speed.py  winres.manifest  winres.rc
src/: main.rs
